--- a/css/general.css
+++ b/css/general.css
@@ -1,15 +1,20 @@
 body {
-    background-color: coral;
+    background: lightsteelblue no-repeat 0 0;
+    margin: 0;
+    padding: 100px 0 0 75px;
 }
 h1 {
     color: black;
-    font-family: Roboto, sans-serif;
-    font-style: normal;
+    font: 'Poppins', sans-serif;
+    font-style: oblique;
+    font-weight: bold; 
+    font-size: xxx-large;
 }
 h2 {
     color: #717171;
+    font-family: 'Raleway', sans-serif;
 }
-p {
-    font: normal 100%/1.5 “Playfair Display”, “Didot”, "Times New Roman", Times, serif;
-    color: rgb(200,100,200);
+div {
+    font-family: 'Roboto', sans-serif;
+    color: #1a1616;
 }
