--- a/css/moviles.css
+++ b/css/moviles.css
@@ -1,13 +1,20 @@
 body {
     -webkit-text-size-adjust: none;
-    background-color: green;
+    background: lightgoldenrodyellow no-repeat center 0;
+    padding: 20px 5px 5px 5px;
 }
 h1 {
     color: black;
-    font-family: Roboto, sans-serif;
-    font-style: bold;
+    font: 'Poppins', sans-serif;
+    font-style: oblique;
+    font-weight: bold; 
+    font-size: xxx-large;
 }
-p {
-    font-family: Roboto, sans-serif;
-    color: rgb(200,100,200);
+h2 {
+    color: #717171;
+    font-family: 'Raleway', sans-serif;
+}
+div {
+    font-family: 'Roboto', sans-serif;
+    color: #1a1616;
 }
